--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yaee",
-  "version": "0.1.1-beta.1",
+  "version": "0.1.1-beta.2",
   "description": "Yet Another EventEmitter",
   "keywords": [
     "event",
@@ -22,21 +22,21 @@
     "iojs": "^2.3.4"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
+    "babel": "^5.8.0",
+    "core-js": "^1.0.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
-    "object.assign": "^3.0.1"
+    "gulp-babel": "^5.1.0"
   },
   "jspm": {
     "main": "yaee",
-    "format": "system",
+    "format": "es6",
     "directories": {
-      "lib": "dist/system"
+      "lib": "src"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.6.14",
-      "babel-runtime": "npm:babel-runtime@^5.6.14",
-      "core-js": "npm:core-js@^0.9.18"
+      "babel": "npm:babel-core@^5.8.0",
+      "babel-runtime": "npm:babel-runtime@^5.8.0",
+      "core-js": "npm:core-js@^1.0.0"
     }
   }
 }
