--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
   "stage": 2,
   "optional": [
-    "es7.classProperties",
-    "es7.decorators",
-    "es7.functionBind"
+    "es7.classProperties"
   ]
 }
