--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "yaee",
   "version": "0.1.2",
-  "description": "Yet Another EventEmitter.",
+  "description": "Yet Another EventEmitter",
   "keywords": [
     "event",
     "events",
-    "eventemitter",
     "emitter"
   ],
   "author": "Stefan Rumzucker",
@@ -13,14 +12,18 @@
     "type": "git",
     "url": "git+https://github.com/stefanr/yaee.git"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^5.8.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0"
+  "main": "dist/cjs/index",
+  "scripts": {
+    "build": "natron build",
+    "build-install": "npm --prefix build install",
+    "test": "mocha"
   },
+  "devDependencies": {
+    "babel-core": "^5.8.0"
+  },
+  "license": "MIT",
   "jspm": {
-    "main": "yaee",
+    "main": "index",
     "format": "amd",
     "directories": {
       "lib": "dist/amd"
@@ -28,7 +31,7 @@
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.0",
       "babel-runtime": "npm:babel-runtime@^5.8.0",
-      "core-js": "npm:core-js@^1.0.0"
+      "core-js": "npm:core-js@^1.1.0"
     }
   }
 }
