--- a/package.json
+++ b/package.json
@@ -4,26 +4,24 @@
   "description": "Yet Another EventEmitter",
   "keywords": [
     "event",
-    "events",
     "emitter"
   ],
   "author": "Stefan Rumzucker",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stefanr/yaee.git"
+    "url": "git+https://github.com/stefanr/node-yaee.git"
   },
-  "main": "dist/cjs/index",
   "scripts": {
-    "build": "natron build",
+    "build": "npm --prefix build run build",
     "build-install": "npm --prefix build install",
-    "test": "mocha"
+    "test": "npm --prefix test test",
+    "test-install": "npm --prefix test install"
   },
   "devDependencies": {
     "babel-core": "^5.8.0"
   },
   "license": "MIT",
   "jspm": {
-    "main": "index",
     "format": "amd",
     "directories": {
       "lib": "dist/amd"
